Css fixing, decreased help text size slightly and text-alignment for debug in lists

--- a/media/style/base.css
+++ b/media/style/base.css
@@ -114,6 +114,7 @@ ul.menulist {
 }
 #helptips p {
 	color: #666;
+	font-size: 92.8%;
 }
 
 /* Content area */
